tests/baselines/reference/moduleAugmentationInAmbientModule1.errors.txt
main.ts(3,1): error TS18056: Declaration file contains hand-written file reference directives: "O.d.ts"


==== main.ts (1 errors) ====
    /// <reference path="O.d.ts" />
    
    import {Observable} from "Observable";
    ~~~~~~
!!! error TS18056: Declaration file contains hand-written file reference directives: "O.d.ts"
    let x: Observable;
    x.foo().x;
    
==== O.d.ts (0 errors) ====
    declare module "Observable" {
        class Observable {}
    }
    
    declare module "M" {
        class Cls { x: number }
    }
    
    declare module "Map" {
        import { Cls } from "M";
        module "Observable" {
            interface Observable {
                foo(): Cls;
            }
        }
    }
    